Fix UI for the dashboard. Remove redundant horizontal & vertical scrollbars, scrolled background, add proportional vertical margins.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,12 +13,11 @@ body {
     background-image: url("/bg-image-skyline.jpg");
     background-repeat: no-repeat;
     background-position: bottom;
-    /* background-position-x: 30%; */
     background-position-y: 80%;
     background-size: cover;
-    overflow: scroll;
     height: 100vh;
     max-height: 100vh;
+    overflow: hidden;
 }
 
 @font-face {
