--- a/client/src/sass/Dashboard.scss
+++ b/client/src/sass/Dashboard.scss
@@ -6,7 +6,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .dashboard-header {
